<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.drftpd</groupId>
    <artifactId>drftpd</artifactId>
    <packaging>pom</packaging>

    <version>4.0.8-SNAPSHOT</version>
    <name>Drftpd project</name>
    <url>https://github.com/drftpd-ng/drftpd</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>src/core</module>
        <module>src/plugins</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <release>15</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}/runtime/master/lib</directory>
                            <includes>
                                <include>**/*.jar</include>
                            </includes>
                        </fileset>
                        <fileset>
                            <directory>${basedir}/runtime/master/build</directory>
                            <includes>
                                <include>**/*.jar</include>
                            </includes>
                        </fileset>
                        <fileset>
                            <directory>${basedir}/runtime/slave/lib</directory>
                            <includes>
                                <include>**/*.jar</include>
                            </includes>
                        </fileset>
                        <fileset>
                            <directory>${basedir}/runtime/slave/build</directory>
                            <includes>
                                <include>**/*.jar</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
